--- a/bayern_players_recognition.ipynb
+++ b/bayern_players_recognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b992622700>"
+       "<matplotlib.image.AxesImage at 0x1bf70995070>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -68,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b992718700>"
+       "<matplotlib.image.AxesImage at 0x1bf72a865b0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "array([[268,  52, 145, 145]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "(268, 52, 145, 145)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -184,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b992a39cd0>"
+       "<matplotlib.image.AxesImage at 0x1bf7f4580a0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        " 'C:\\\\Users\\\\przem\\\\Desktop\\\\bayern_players_recognition\\\\model\\\\dataset\\\\thomas-mueller']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,16 +432,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b9a92958b0>"
+       "<matplotlib.image.AxesImage at 0x1bf06ff71c0>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -465,16 +465,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b9a9341a90>"
+       "<matplotlib.image.AxesImage at 0x1bf0700bca0>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -495,6 +495,83 @@
     "im_har = w2d(cropped_image, 'db1', 5)\n",
     "plt.imshow(im_har, cmap='gray')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alphonso-davies': 0,\n",
+       " 'benjamin-pavard': 1,\n",
+       " 'bouna-sarr': 2,\n",
+       " 'christian-fruechtl': 3,\n",
+       " 'corentin-tolisso': 4,\n",
+       " 'dayot-upamecano': 5,\n",
+       " 'eric-maxim-choupo-moting': 6,\n",
+       " 'jamal-musiala': 7,\n",
+       " 'joshua-kimmich': 8,\n",
+       " 'josip-stanisic': 9,\n",
+       " 'kingsley-coman': 10,\n",
+       " 'leon-goretzka': 11,\n",
+       " 'leroy-sane': 12,\n",
+       " 'lucas-hernandez': 13,\n",
+       " 'malik-tillman': 14,\n",
+       " 'manuel-neuer': 15,\n",
+       " 'marc-roca': 16,\n",
+       " 'marcel-sabitzer': 17,\n",
+       " 'niklas-sule': 18,\n",
+       " 'omar-richards': 19,\n",
+       " 'paul-wanner': 20,\n",
+       " 'robert-lewandowski': 21,\n",
+       " 'serge-gnabry': 22,\n",
+       " 'sven-ulreich': 23,\n",
+       " 'tanguy-nianzou': 24,\n",
+       " 'thomas-mueller': 25}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_dict = {}\n",
+    "count = 0\n",
+    "for celebrity_name in celebrity_file_names_dict.keys():\n",
+    "    class_dict[celebrity_name] = count\n",
+    "    count += 1\n",
+    "class_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = []\n",
+    "y = []\n",
+    "\n",
+    "for celebrity_name, training_files in celebrity_file_names_dict.items():\n",
+    "    for training_image in training_files:\n",
+    "        img = cv2.imread(training_image)\n",
+    "        scalled_raw_img = cv2.resize(img, (32, 32))\n",
+    "        img_har = w2d(img, 'db1', 5)\n",
+    "        scalled_img_har = cv2.resize(img_har, (32, 32))\n",
+    "        combined_img = np.vstack((scalled_raw_img.reshape(32*32*3, 1), scalled_img_har.reshape(32*32, 1)))\n",
+    "        x.append(combined_img)\n",
+    "        y.append(class_dict[celebrity_name])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
