--- a/best_tennis_players_recognition.ipynb
+++ b/best_tennis_players_recognition.ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x232a0ba96a0>"
+       "<matplotlib.image.AxesImage at 0x2b0b4ba8df0>"
       ]
      },
      "execution_count": 4,
@@ -74,7 +74,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x232a3193ca0>"
+       "<matplotlib.image.AxesImage at 0x2b0b4c9b4f0>"
       ]
      },
      "execution_count": 5,
@@ -190,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x232a33d21f0>"
+       "<matplotlib.image.AxesImage at 0x2b0b72aaf70>"
       ]
      },
      "execution_count": 9,
@@ -375,7 +375,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x232a34470a0>"
+       "<matplotlib.image.AxesImage at 0x2b0b731dd60>"
       ]
      },
      "execution_count": 17,
@@ -408,7 +408,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x232a349d760>"
+       "<matplotlib.image.AxesImage at 0x2b0c95cf460>"
       ]
      },
      "execution_count": 18,
@@ -827,6 +827,38 @@
    ],
    "source": [
     "print(classification_report(y_test, pipe.predict(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\saved_model.pkl']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "joblib.dump(pipe, r'C:\\Users\\przem\\Desktop\\best_tennis_players_recognition\\saved_model.pkl') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open(r'C:\\Users\\przem\\Desktop\\best_tennis_players_recognition\\class_dictionary.json', 'w') as f:\n",
+    "    f.write(json.dumps(class_dict))"
    ]
   }
  ],
