Creating html/css/js files and container for each player

--- a/best_tennis_players_recognition.ipynb
+++ b/best_tennis_players_recognition.ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b0b4ba8df0>"
+       "<matplotlib.image.AxesImage at 0x29cc2aa4700>"
       ]
      },
      "execution_count": 4,
@@ -74,7 +74,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b0b4c9b4f0>"
+       "<matplotlib.image.AxesImage at 0x29cc34c0c10>"
       ]
      },
      "execution_count": 5,
@@ -190,7 +190,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b0b72aaf70>"
+       "<matplotlib.image.AxesImage at 0x29cc36cff10>"
       ]
      },
      "execution_count": 9,
@@ -264,8 +264,7 @@
     {
      "data": {
       "text/plain": [
-       "['C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\dataset\\\\alexander-zverev',\n",
-       " 'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\dataset\\\\daniil-medvedev',\n",
+       "['C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\dataset\\\\daniil-medvedev',\n",
        " 'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\dataset\\\\novak-djokovic',\n",
        " 'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\dataset\\\\rafael-nadal',\n",
        " 'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\dataset\\\\stefanos-tsitsipas']"
@@ -303,8 +302,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alexander-zverev\n",
-      "Generating cropped images in folder:  C:\\Users\\przem\\Desktop\\best_tennis_players_recognition\\model\\cropped\\alexander-zverev\n",
       "daniil-medvedev\n",
       "Generating cropped images in folder:  C:\\Users\\przem\\Desktop\\best_tennis_players_recognition\\model\\cropped\\daniil-medvedev\n",
       "novak-djokovic\n",
@@ -375,7 +372,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b0b731dd60>"
+       "<matplotlib.image.AxesImage at 0x29cd722efa0>"
       ]
      },
      "execution_count": 17,
@@ -408,7 +405,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2b0c95cf460>"
+       "<matplotlib.image.AxesImage at 0x29cd588f6d0>"
       ]
      },
      "execution_count": 18,
@@ -459,19 +456,7 @@
     {
      "data": {
       "text/plain": [
-       "{'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev': ['C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev\\\\alexander-zverev1.jpg',\n",
-       "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev\\\\alexander-zverev10.jpg',\n",
-       "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev\\\\alexander-zverev11.jpg',\n",
-       "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev\\\\alexander-zverev12.jpg',\n",
-       "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev\\\\alexander-zverev2.jpg',\n",
-       "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev\\\\alexander-zverev3.jpg',\n",
-       "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev\\\\alexander-zverev4.jpg',\n",
-       "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev\\\\alexander-zverev5.jpg',\n",
-       "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev\\\\alexander-zverev6.jpg',\n",
-       "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev\\\\alexander-zverev7.jpg',\n",
-       "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev\\\\alexander-zverev8.jpg',\n",
-       "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev\\\\alexander-zverev9.jpg'],\n",
-       " 'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev': ['C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev1.jpg',\n",
+       "{'daniil-medvedev': ['C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev1.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev10.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev11.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev12.jpg',\n",
@@ -487,8 +472,6 @@
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev21.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev22.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev23.jpg',\n",
-       "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev24.jpg',\n",
-       "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev25.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev3.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev4.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev5.jpg',\n",
@@ -496,7 +479,7 @@
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev7.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev8.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev\\\\daniil-medvedev9.jpg'],\n",
-       " 'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\novak-djokovic': ['C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\novak-djokovic\\\\novak-djokovic1.jpg',\n",
+       " 'novak-djokovic': ['C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\novak-djokovic\\\\novak-djokovic1.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\novak-djokovic\\\\novak-djokovic10.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\novak-djokovic\\\\novak-djokovic11.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\novak-djokovic\\\\novak-djokovic12.jpg',\n",
@@ -554,7 +537,7 @@
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\novak-djokovic\\\\novak-djokovic7.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\novak-djokovic\\\\novak-djokovic8.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\novak-djokovic\\\\novak-djokovic9.jpg'],\n",
-       " 'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\rafael-nadal': ['C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\rafael-nadal\\\\rafael-nadal1.jpg',\n",
+       " 'rafael-nadal': ['C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\rafael-nadal\\\\rafael-nadal1.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\rafael-nadal\\\\rafael-nadal10.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\rafael-nadal\\\\rafael-nadal11.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\rafael-nadal\\\\rafael-nadal12.jpg',\n",
@@ -613,7 +596,7 @@
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\rafael-nadal\\\\rafael-nadal7.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\rafael-nadal\\\\rafael-nadal8.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\rafael-nadal\\\\rafael-nadal9.jpg'],\n",
-       " 'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\stefanos-tsitsipas': ['C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\stefanos-tsitsipas\\\\stefanos-tsitsipas1.jpg',\n",
+       " 'stefanos-tsitsipas': ['C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\stefanos-tsitsipas\\\\stefanos-tsitsipas1.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\stefanos-tsitsipas\\\\stefanos-tsitsipas10.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\stefanos-tsitsipas\\\\stefanos-tsitsipas11.jpg',\n",
        "  'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\stefanos-tsitsipas\\\\stefanos-tsitsipas12.jpg',\n",
@@ -678,7 +661,7 @@
    "source": [
     "celebrity_file_names_dict = {}\n",
     "for img_dir in cropped_image_dirs:\n",
-    "    celebrity_name = img_dir.split('/')[-1]\n",
+    "    celebrity_name = img_dir.split('\\\\')[-1]\n",
     "    file_list = []\n",
     "    for entry in os.scandir(img_dir):\n",
     "        file_list.append(entry.path)\n",
@@ -694,11 +677,10 @@
     {
      "data": {
       "text/plain": [
-       "{'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\alexander-zverev': 0,\n",
-       " 'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\daniil-medvedev': 1,\n",
-       " 'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\novak-djokovic': 2,\n",
-       " 'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\rafael-nadal': 3,\n",
-       " 'C:\\\\Users\\\\przem\\\\Desktop\\\\best_tennis_players_recognition\\\\model\\\\cropped\\\\stefanos-tsitsipas': 4}"
+       "{'daniil-medvedev': 0,\n",
+       " 'novak-djokovic': 1,\n",
+       " 'rafael-nadal': 2,\n",
+       " 'stefanos-tsitsipas': 3}"
       ]
      },
      "execution_count": 21,
@@ -743,7 +725,7 @@
     {
      "data": {
       "text/plain": [
-       "(209, 4096)"
+       "(195, 4096)"
       ]
      },
      "execution_count": 23,
@@ -777,7 +759,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8301886792452831"
+       "0.8571428571428571"
       ]
      },
      "execution_count": 25,
@@ -804,24 +786,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.00      0.00      0.00         3\n",
-      "           1       1.00      0.71      0.83         7\n",
+      "           0       1.00      0.43      0.60         7\n",
+      "           1       0.88      1.00      0.93        14\n",
       "           2       0.83      1.00      0.91        15\n",
-      "           3       0.81      0.81      0.81        16\n",
-      "           4       0.79      0.92      0.85        12\n",
+      "           3       0.83      0.77      0.80        13\n",
       "\n",
-      "    accuracy                           0.83        53\n",
-      "   macro avg       0.69      0.69      0.68        53\n",
-      "weighted avg       0.79      0.83      0.80        53\n",
+      "    accuracy                           0.86        49\n",
+      "   macro avg       0.89      0.80      0.81        49\n",
+      "weighted avg       0.87      0.86      0.84        49\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Anaconda\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
