app.js and model changes

--- a/best_tennis_players_recognition.ipynb
+++ b/best_tennis_players_recognition.ipynb
@@ -11,6 +11,7 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import pywt\n",
+    "from sklearn.model_selection import cross_val_predict\n",
     "%matplotlib inline"
    ]
   },
@@ -42,7 +43,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x29cc2aa4700>"
+       "<matplotlib.image.AxesImage at 0x237f9a011f0>"
       ]
      },
      "execution_count": 4,
@@ -74,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x29cc34c0c10>"
+       "<matplotlib.image.AxesImage at 0x237fa3e35e0>"
       ]
      },
      "execution_count": 5,
@@ -190,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x29cc36cff10>"
+       "<matplotlib.image.AxesImage at 0x2378ecca1c0>"
       ]
      },
      "execution_count": 9,
@@ -372,7 +373,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x29cd722efa0>"
+       "<matplotlib.image.AxesImage at 0x2378ed381f0>"
       ]
      },
      "execution_count": 17,
@@ -405,7 +406,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x29cd588f6d0>"
+       "<matplotlib.image.AxesImage at 0x2378d51e8e0>"
       ]
      },
      "execution_count": 18,
@@ -770,7 +771,7 @@
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0,)\n",
     "\n",
-    "pipe = Pipeline([('scaler', StandardScaler()), ('svc', SVC(kernel = 'rbf', C = 10))])\n",
+    "pipe = Pipeline([('scaler', StandardScaler()), ('svc', SVC(kernel = 'rbf', C = 10, probability=True))])\n",
     "pipe.fit(X_train, y_train)\n",
     "pipe.score(X_test, y_test)"
    ]
